--- a/Objects/rt1052.build_log.htm
+++ b/Objects/rt1052.build_log.htm
@@ -27,24 +27,15 @@ Project File Date:  12/14/2019
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Target 1'
-compiling main.c...
 compiling adc_app.c...
-compiling ble_app.c...
-compiling interrupt.c...
-compiling battery_app.c...
-compiling led_app.c...
-compiling lpuart1.c...
-compiling rtc_drv.c...
-compiling peripherals.c...
-compiling adc_drv.c...
-compiling led_drv.c...
-compiling battery_drv.c...
-compiling pin_mux.c...
+User\src\adc_app.c(30): warning:  #177-D: variable "timerCount"  was declared but never referenced
+      uint32_t timerCount = 0;
+User\src\adc_app.c: 1 warning, 0 errors
 linking...
 .\RTE\Device\MIMXRT1052CVL5B\MIMXRT1052xxxxx_flexspi_nor.scf(97): warning: L6329W: Pattern *(NonCacheable) only matches removed unused sections.
-Program Size: Code=41004 RO-data=5332 RW-data=400 ZI-data=15828  
+Program Size: Code=41844 RO-data=5340 RW-data=412 ZI-data=15828  
 Finished: 0 information, 1 warning and 0 error messages.
-".\Objects\rt1052.axf" - 0 Error(s), 1 Warning(s).
+".\Objects\rt1052.axf" - 0 Error(s), 2 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -126,30 +117,30 @@ Package Vendor: NXP
       Include file:  CMSIS\RTOS2\FreeRTOS\Config\ARMCM\FreeRTOSConfig.h
 
    * Component: ARM.FreeRTOS::RTOS:Core:Cortex-M:10.2.0
-      Include file:  Source\include\queue.h
-      Include file:  Source\include\FreeRTOS.h
       Include file:  Source\include\task.h
-      Source file:   Source\tasks.c
+      Source file:   Source\portable\RVDS\ARM_CM7\r0p1\port.c
       Source file:   Source\queue.c
+      Include file:  Source\include\FreeRTOS.h
+      Source file:   Source\tasks.c
+      Include file:  Source\include\queue.h
       Include file:  Source\include\semphr.h
       Source file:   Source\list.c
-      Source file:   Source\portable\RVDS\ARM_CM7\r0p1\port.c
       Source file:   CMSIS\RTOS2\FreeRTOS\Source\freertos_evr.c
 
    * Component: ARM.FreeRTOS::RTOS:Coroutines:10.2.0
-      Include file:  Source\include\croutine.h
       Source file:   Source\croutine.c
+      Include file:  Source\include\croutine.h
 
    * Component: ARM.FreeRTOS::RTOS:Event Groups:10.2.0
-      Source file:   Source\event_groups.c
       Include file:  Source\include\event_groups.h
+      Source file:   Source\event_groups.c
 
    * Component: ARM.FreeRTOS::RTOS:Heap:Heap_4:10.2.0
       Source file:   Source\portable\MemMang\heap_4.c
 
    * Component: ARM.FreeRTOS::RTOS:Message Buffer:10.2.0
-      Include file:  Source\include\message_buffer.h
       Source file:   Source\stream_buffer.c
+      Include file:  Source\include\message_buffer.h
 
    * Component: ARM.FreeRTOS::RTOS:Stream Buffer:10.2.0
       Include file:  Source\include\stream_buffer.h
@@ -162,37 +153,37 @@ Package Vendor: NXP
    * Component: ARM::CMSIS:CORE:5.3.0
 
    * Component: ARM::CMSIS:RTOS2:FreeRTOS:10.2.0
-      Source file:   CMSIS\RTOS2\FreeRTOS\Source\cmsis_os2.c
       Source file:   CMSIS\RTOS2\FreeRTOS\Source\ARM\clib_arm.c
+      Source file:   CMSIS\RTOS2\FreeRTOS\Source\cmsis_os2.c
       Source file:   CMSIS\RTOS2\FreeRTOS\Source\os_systick.c
 
    * Component: NXP::Device:SDK Drivers:adc_12b1msps_sar:2.0.2
-      Include file:  drivers\fsl_adc.h
       Source file:   drivers\fsl_adc.c
+      Include file:  drivers\fsl_adc.h
 
    * Component: NXP::Device:SDK Drivers:clock:2.1.0
       Source file:   drivers\fsl_clock.c
       Include file:  drivers\fsl_clock.h
 
    * Component: NXP::Device:SDK Drivers:common:2.1.0
-      Source file:   drivers\fsl_common.c
       Include file:  drivers\fsl_common.h
+      Source file:   drivers\fsl_common.c
 
    * Component: NXP::Device:SDK Drivers:dmamux:2.0.2
       Source file:   drivers\fsl_dmamux.c
       Include file:  drivers\fsl_dmamux.h
 
    * Component: NXP::Device:SDK Drivers:edma:2.1.8
-      Include file:  drivers\fsl_edma.h
       Source file:   drivers\fsl_edma.c
+      Include file:  drivers\fsl_edma.h
 
    * Component: NXP::Device:SDK Drivers:gpio:2.0.2
-      Source file:   drivers\fsl_gpio.c
       Include file:  drivers\fsl_gpio.h
+      Source file:   drivers\fsl_gpio.c
 
    * Component: NXP::Device:SDK Drivers:gpt:2.0.0
-      Source file:   drivers\fsl_gpt.c
       Include file:  drivers\fsl_gpt.h
+      Source file:   drivers\fsl_gpt.c
 
    * Component: NXP::Device:SDK Drivers:i2c:2.1.9
       Include file:  drivers\fsl_lpi2c.h
@@ -218,12 +209,12 @@ Package Vendor: NXP
       Include file:  components\uart\uart.h
 
    * Component: NXP::Device:SDK Drivers:lpuart_edma:2.2.7
-      Source file:   drivers\fsl_lpuart_edma.c
       Include file:  drivers\fsl_lpuart_edma.h
+      Source file:   drivers\fsl_lpuart_edma.c
 
    * Component: NXP::Device:SDK Drivers:pit:2.0.2
-      Include file:  drivers\fsl_pit.h
       Source file:   drivers\fsl_pit.c
+      Include file:  drivers\fsl_pit.h
 
    * Component: NXP::Device:SDK Drivers:qtmr:2.0.0
       Source file:   drivers\fsl_qtmr.c
@@ -234,27 +225,27 @@ Package Vendor: NXP
       Source file:   drivers\fsl_usdhc.c
 
    * Component: NXP::Device:SDK Drivers:snvs_hp:2.1.2
-      Include file:  drivers\fsl_snvs_hp.h
       Source file:   drivers\fsl_snvs_hp.c
+      Include file:  drivers\fsl_snvs_hp.h
 
    * Component: NXP::Device:SDK Utilities:assert:1.0.0
       Source file:   utilities\fsl_assert.c
 
    * Component: NXP::Device:SDK Utilities:debug_console:1.0.0
-      Include file:  utilities\debug_console\fsl_debug_console_conf.h
-      Include file:  utilities\str\fsl_str.h
-      Source file:   utilities\debug_console\fsl_debug_console.c
       Include file:  utilities\debug_console\fsl_debug_console.h
+      Include file:  utilities\debug_console\fsl_debug_console_conf.h
+      Source file:   utilities\debug_console\fsl_debug_console.c
       Source file:   utilities\str\fsl_str.c
+      Include file:  utilities\str\fsl_str.h
 
    * Component: NXP::Device:SDK Utilities:notifier:1.0.0
       Include file:  utilities\fsl_notifier.h
       Source file:   utilities\fsl_notifier.c
 
    * Component: NXP::Device:SDK Utilities:serial_manager:1.0.0
+      Include file:  components\serial_manager\serial_manager.h
       Include file:  components\serial_manager\serial_port_internal.h
       Source file:   components\serial_manager\serial_manager.c
-      Include file:  components\serial_manager\serial_manager.h
 
    * Component: NXP::Device:SDK Utilities:serial_manager_uart:1.0.0
       Include file:  components\serial_manager\serial_port_uart.h
@@ -266,12 +257,12 @@ Package Vendor: NXP
 
    * Component: NXP::Device:Startup:MIMXRT1052_startup:1.0.0
       Source file:   system_MIMXRT1052.c
-      Include file:  MIMXRT1052.h
-      Source file:   arm\startup_MIMXRT1052.s
-      Include file:  fsl_device_registers.h
       Include file:  MIMXRT1052_features.h
       Include file:  system_MIMXRT1052.h
-Build Time Elapsed:  00:00:11
+      Include file:  MIMXRT1052.h
+      Include file:  fsl_device_registers.h
+      Source file:   arm\startup_MIMXRT1052.s
+Build Time Elapsed:  00:00:04
 </pre>
 </body>
 </html>
