--- a/Objects/rt1052.build_log.htm
+++ b/Objects/rt1052.build_log.htm
@@ -22,17 +22,34 @@ Dialog DLL:      TCM.DLL V1.36.2.0
  
 <h2>Project:</h2>
 D:\RT1052_Project\rt1052.uvprojx
-Project File Date:  12/15/2019
+Project File Date:  12/16/2019
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Target 1'
+compiling ble_app.c...
+compiling interrupt.c...
+compiling adc_app.c...
+compiling main.c...
+compiling battery_app.c...
+compiling led_app.c...
+compiling lpuart1.c...
+compiling ble_protocol.c...
+User\src\ble_protocol.c(145): warning:  #177-D: function "ParseMsg6"  was declared but never referenced
+  static char * ParseMsg6(cJSON *pJson, cJSON * pSub)
+User\src\ble_protocol.c(177): warning:  #177-D: function "ParseMsg7"  was declared but never referenced
+  static char * ParseMsg7(cJSON *pJson, cJSON * pSub)
+User\src\ble_protocol.c: 2 warnings, 0 errors
+compiling rtc_drv.c...
 compiling adc_drv.c...
+compiling led_drv.c...
+compiling battery_drv.c...
+compiling iic_temp_drv.c...
 linking...
 .\RTE\Device\MIMXRT1052CVL5B\MIMXRT1052xxxxx_flexspi_nor.scf(97): warning: L6329W: Pattern *(NonCacheable) only matches removed unused sections.
-Program Size: Code=43292 RO-data=5508 RW-data=412 ZI-data=15828  
+Program Size: Code=54888 RO-data=5552 RW-data=524 ZI-data=15828  
 Finished: 0 information, 1 warning and 0 error messages.
-".\Objects\rt1052.axf" - 0 Error(s), 1 Warning(s).
+".\Objects\rt1052.axf" - 0 Error(s), 3 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -116,19 +133,19 @@ Package Vendor: NXP
       Include file:  CMSIS\RTOS2\FreeRTOS\Config\ARMCM\FreeRTOSConfig.h
 
    * Component: ARM.FreeRTOS::RTOS:Core:Cortex-M:10.2.0
-      Include file:  Source\include\task.h
-      Source file:   Source\portable\RVDS\ARM_CM7\r0p1\port.c
-      Source file:   Source\queue.c
-      Include file:  Source\include\FreeRTOS.h
       Source file:   Source\tasks.c
-      Include file:  Source\include\queue.h
+      Include file:  Source\include\FreeRTOS.h
       Include file:  Source\include\semphr.h
+      Include file:  Source\include\task.h
+      Include file:  Source\include\queue.h
       Source file:   Source\list.c
+      Source file:   Source\queue.c
+      Source file:   Source\portable\RVDS\ARM_CM7\r0p1\port.c
       Source file:   CMSIS\RTOS2\FreeRTOS\Source\freertos_evr.c
 
    * Component: ARM.FreeRTOS::RTOS:Coroutines:10.2.0
-      Source file:   Source\croutine.c
       Include file:  Source\include\croutine.h
+      Source file:   Source\croutine.c
 
    * Component: ARM.FreeRTOS::RTOS:Event Groups:10.2.0
       Include file:  Source\include\event_groups.h
@@ -146,19 +163,19 @@ Package Vendor: NXP
       Source file:   Source\stream_buffer.c
 
    * Component: ARM.FreeRTOS::RTOS:Timers:10.2.0
-      Include file:  Source\include\timers.h
       Source file:   Source\timers.c
+      Include file:  Source\include\timers.h
 
    * Component: ARM::CMSIS:CORE:5.3.0
 
    * Component: ARM::CMSIS:RTOS2:FreeRTOS:10.2.0
-      Source file:   CMSIS\RTOS2\FreeRTOS\Source\ARM\clib_arm.c
-      Source file:   CMSIS\RTOS2\FreeRTOS\Source\cmsis_os2.c
       Source file:   CMSIS\RTOS2\FreeRTOS\Source\os_systick.c
+      Source file:   CMSIS\RTOS2\FreeRTOS\Source\cmsis_os2.c
+      Source file:   CMSIS\RTOS2\FreeRTOS\Source\ARM\clib_arm.c
 
    * Component: NXP::Device:SDK Drivers:adc_12b1msps_sar:2.0.2
-      Source file:   drivers\fsl_adc.c
       Include file:  drivers\fsl_adc.h
+      Source file:   drivers\fsl_adc.c
 
    * Component: NXP::Device:SDK Drivers:adc_etc:2.0.1
       Source file:   drivers\fsl_adc_etc.c
@@ -169,63 +186,63 @@ Package Vendor: NXP
       Include file:  drivers\fsl_clock.h
 
    * Component: NXP::Device:SDK Drivers:common:2.1.0
-      Include file:  drivers\fsl_common.h
       Source file:   drivers\fsl_common.c
+      Include file:  drivers\fsl_common.h
 
    * Component: NXP::Device:SDK Drivers:dmamux:2.0.2
       Source file:   drivers\fsl_dmamux.c
       Include file:  drivers\fsl_dmamux.h
 
    * Component: NXP::Device:SDK Drivers:edma:2.1.8
-      Source file:   drivers\fsl_edma.c
       Include file:  drivers\fsl_edma.h
+      Source file:   drivers\fsl_edma.c
 
    * Component: NXP::Device:SDK Drivers:gpio:2.0.2
       Include file:  drivers\fsl_gpio.h
       Source file:   drivers\fsl_gpio.c
 
    * Component: NXP::Device:SDK Drivers:gpt:2.0.0
-      Include file:  drivers\fsl_gpt.h
       Source file:   drivers\fsl_gpt.c
+      Include file:  drivers\fsl_gpt.h
 
    * Component: NXP::Device:SDK Drivers:i2c:2.1.9
-      Include file:  drivers\fsl_lpi2c.h
       Source file:   drivers\fsl_lpi2c.c
+      Include file:  drivers\fsl_lpi2c.h
 
    * Component: NXP::Device:SDK Drivers:iomuxc:2.0.0
       Include file:  drivers\fsl_iomuxc.h
 
    * Component: NXP::Device:SDK Drivers:lists:1.0.0
-      Source file:   components\lists\generic_list.c
       Include file:  components\lists\generic_list.h
+      Source file:   components\lists\generic_list.c
 
    * Component: NXP::Device:SDK Drivers:lpspi:2.0.3
-      Source file:   drivers\fsl_lpspi.c
       Include file:  drivers\fsl_lpspi.h
+      Source file:   drivers\fsl_lpspi.c
 
    * Component: NXP::Device:SDK Drivers:lpuart:2.2.7
       Source file:   drivers\fsl_lpuart.c
       Include file:  drivers\fsl_lpuart.h
 
    * Component: NXP::Device:SDK Drivers:lpuart_adapter:1.0.0
-      Source file:   components\uart\lpuart_adapter.c
       Include file:  components\uart\uart.h
+      Source file:   components\uart\lpuart_adapter.c
 
    * Component: NXP::Device:SDK Drivers:lpuart_edma:2.2.7
-      Include file:  drivers\fsl_lpuart_edma.h
       Source file:   drivers\fsl_lpuart_edma.c
+      Include file:  drivers\fsl_lpuart_edma.h
 
    * Component: NXP::Device:SDK Drivers:pit:2.0.2
-      Source file:   drivers\fsl_pit.c
       Include file:  drivers\fsl_pit.h
+      Source file:   drivers\fsl_pit.c
 
    * Component: NXP::Device:SDK Drivers:qtmr:2.0.0
       Source file:   drivers\fsl_qtmr.c
       Include file:  drivers\fsl_qtmr.h
 
    * Component: NXP::Device:SDK Drivers:sdhc:2.2.8
-      Include file:  drivers\fsl_usdhc.h
       Source file:   drivers\fsl_usdhc.c
+      Include file:  drivers\fsl_usdhc.h
 
    * Component: NXP::Device:SDK Drivers:snvs_hp:2.1.2
       Source file:   drivers\fsl_snvs_hp.c
@@ -239,37 +256,37 @@ Package Vendor: NXP
       Source file:   utilities\fsl_assert.c
 
    * Component: NXP::Device:SDK Utilities:debug_console:1.0.0
-      Include file:  utilities\debug_console\fsl_debug_console.h
-      Include file:  utilities\debug_console\fsl_debug_console_conf.h
       Source file:   utilities\debug_console\fsl_debug_console.c
-      Source file:   utilities\str\fsl_str.c
+      Include file:  utilities\debug_console\fsl_debug_console_conf.h
       Include file:  utilities\str\fsl_str.h
+      Include file:  utilities\debug_console\fsl_debug_console.h
+      Source file:   utilities\str\fsl_str.c
 
    * Component: NXP::Device:SDK Utilities:notifier:1.0.0
-      Include file:  utilities\fsl_notifier.h
       Source file:   utilities\fsl_notifier.c
+      Include file:  utilities\fsl_notifier.h
 
    * Component: NXP::Device:SDK Utilities:serial_manager:1.0.0
       Include file:  components\serial_manager\serial_manager.h
-      Include file:  components\serial_manager\serial_port_internal.h
       Source file:   components\serial_manager\serial_manager.c
+      Include file:  components\serial_manager\serial_port_internal.h
 
    * Component: NXP::Device:SDK Utilities:serial_manager_uart:1.0.0
-      Include file:  components\serial_manager\serial_port_uart.h
       Source file:   components\serial_manager\serial_port_uart.c
+      Include file:  components\serial_manager\serial_port_uart.h
 
    * Component: NXP::Device:SDK Utilities:shell:1.0.0
-      Include file:  utilities\fsl_shell.h
       Source file:   utilities\fsl_shell.c
+      Include file:  utilities\fsl_shell.h
 
    * Component: NXP::Device:Startup:MIMXRT1052_startup:1.0.0
+      Include file:  system_MIMXRT1052.h
+      Source file:   arm\startup_MIMXRT1052.s
+      Include file:  fsl_device_registers.h
       Source file:   system_MIMXRT1052.c
       Include file:  MIMXRT1052_features.h
-      Include file:  system_MIMXRT1052.h
       Include file:  MIMXRT1052.h
-      Include file:  fsl_device_registers.h
-      Source file:   arm\startup_MIMXRT1052.s
-Build Time Elapsed:  00:00:03
+Build Time Elapsed:  00:00:09
 </pre>
 </body>
 </html>
