--- a/Objects/rt1052.build_log.htm
+++ b/Objects/rt1052.build_log.htm
@@ -22,83 +22,15 @@ Dialog DLL:      TCM.DLL V1.32.0.0
  
 <h2>Project:</h2>
 D:\RT1052_Project\rt1052.uvprojx
-Project File Date:  12/19/2019
+Project File Date:  12/21/2019
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Target 1'
-compiling adc_app.c...
-compiling battery_app.c...
-compiling interrupt.c...
-compiling led_app.c...
-compiling core_delay.c...
-compiling ble_protocol.c...
-compiling lpuart1.c...
-compiling cJSON.c...
-compiling adc_drv.c...
-compiling rtc_drv.c...
-compiling emmc_drv.c...
-compiling battery_drv.c...
-compiling led_drv.c...
-compiling clock_config.c...
-compiling iic_temp_drv.c...
-compiling peripherals.c...
-compiling pin_mux.c...
-compiling fsl_sdmmc_common.c...
-compiling fsl_sdmmc_host.c...
-compiling fsl_sdmmc_event.c...
-compiling ffsystem.c...
-compiling fsl_mmc_disk.c...
-compiling ff.c...
-compiling fsl_mmc.c...
-compiling ffunicode.c...
-compiling diskio.c...
-compiling evkbimxrt1050_sdram_ini_dcd.c...
-compiling fsl_flexspi_nor_boot.c...
-compiling evkbimxrt1050_flexspi_nor_config.c...
-compiling clib_arm.c...
-compiling os_systick.c...
-compiling generic_list.c...
-compiling cmsis_os2.c...
-compiling serial_manager.c...
-compiling serial_port_uart.c...
-compiling lpuart_adapter.c...
-compiling fsl_adc.c...
-compiling fsl_adc_etc.c...
-compiling fsl_clock.c...
-compiling fsl_common.c...
-compiling fsl_dmamux.c...
-compiling fsl_edma.c...
-compiling fsl_gpio.c...
-compiling fsl_gpt.c...
-compiling fsl_lpi2c.c...
-compiling fsl_lpspi.c...
-compiling fsl_lpuart_edma.c...
-compiling fsl_lpuart.c...
-compiling fsl_pit.c...
-compiling fsl_qtmr.c...
-compiling fsl_snvs_hp.c...
-compiling fsl_usdhc.c...
-compiling fsl_xbara.c...
-compiling fsl_assert.c...
-compiling fsl_debug_console.c...
-compiling fsl_notifier.c...
-compiling fsl_shell.c...
-compiling system_MIMXRT1052.c...
-compiling fsl_str.c...
-compiling croutine.c...
-compiling freertos_evr.c...
-compiling event_groups.c...
-compiling list.c...
-compiling port.c...
-compiling heap_4.c...
-compiling stream_buffer.c...
-compiling queue.c...
-compiling timers.c...
-compiling tasks.c...
+compiling main.c...
 linking...
 .\RTE\Device\MIMXRT1052CVL5B\MIMXRT1052xxxxx_flexspi_nor_sdram.scf(153): warning: L6329W: Pattern *(NonCacheable) only matches removed unused sections.
-Program Size: Code=42004 RO-data=3684 RW-data=372 ZI-data=16884  
+Program Size: Code=42624 RO-data=3680 RW-data=372 ZI-data=18924  
 Finished: 0 information, 1 warning and 0 error messages.
 After Build - User command #1: fromelf --bin ".\Objects\rt1052.axf" --output ".\Objects\rt1052.bin"
 Error: Q0147E: Failed to create Directory .\Objects\rt1052.bin\RW_m_config_text: File exists
@@ -181,10 +113,10 @@ Package Vendor: NXP
 <h2>Collection of Component Files used:</h2>
 
    * Component: NXP::Device:Startup:MIMXRT1052_startup:1.0.0
-      Include file:  fsl_device_registers.h
-      Include file:  MIMXRT1052.h
-      Source file:   system_MIMXRT1052.c
       Source file:   arm\startup_MIMXRT1052.s
+      Source file:   system_MIMXRT1052.c
+      Include file:  MIMXRT1052.h
+      Include file:  fsl_device_registers.h
       Include file:  system_MIMXRT1052.h
       Include file:  MIMXRT1052_features.h
 
@@ -193,8 +125,8 @@ Package Vendor: NXP
       Source file:   utilities\fsl_shell.c
 
    * Component: NXP::Device:SDK Utilities:serial_manager_uart:1.0.0
-      Include file:  components\serial_manager\serial_port_uart.h
       Source file:   components\serial_manager\serial_port_uart.c
+      Include file:  components\serial_manager\serial_port_uart.h
 
    * Component: NXP::Device:SDK Utilities:serial_manager:1.0.0
       Include file:  components\serial_manager\serial_port_internal.h
@@ -202,54 +134,54 @@ Package Vendor: NXP
       Include file:  components\serial_manager\serial_manager.h
 
    * Component: NXP::Device:SDK Utilities:notifier:1.0.0
-      Source file:   utilities\fsl_notifier.c
       Include file:  utilities\fsl_notifier.h
+      Source file:   utilities\fsl_notifier.c
 
    * Component: NXP::Device:SDK Utilities:debug_console:1.0.0
-      Include file:  utilities\debug_console\fsl_debug_console.h
       Source file:   utilities\debug_console\fsl_debug_console.c
-      Include file:  utilities\debug_console\fsl_debug_console_conf.h
-      Source file:   utilities\str\fsl_str.c
       Include file:  utilities\str\fsl_str.h
+      Source file:   utilities\str\fsl_str.c
+      Include file:  utilities\debug_console\fsl_debug_console.h
+      Include file:  utilities\debug_console\fsl_debug_console_conf.h
 
    * Component: NXP::Device:SDK Utilities:assert:1.0.0
       Source file:   utilities\fsl_assert.c
 
    * Component: NXP::Device:SDK Drivers:xbara:2.0.4
-      Include file:  drivers\fsl_xbara.h
       Source file:   drivers\fsl_xbara.c
+      Include file:  drivers\fsl_xbara.h
 
    * Component: NXP::Device:SDK Drivers:snvs_hp:2.1.2
-      Source file:   drivers\fsl_snvs_hp.c
       Include file:  drivers\fsl_snvs_hp.h
+      Source file:   drivers\fsl_snvs_hp.c
 
    * Component: NXP::Device:SDK Drivers:sdhc:2.2.8
-      Include file:  drivers\fsl_usdhc.h
       Source file:   drivers\fsl_usdhc.c
+      Include file:  drivers\fsl_usdhc.h
 
    * Component: NXP::Device:SDK Drivers:qtmr:2.0.0
-      Include file:  drivers\fsl_qtmr.h
       Source file:   drivers\fsl_qtmr.c
+      Include file:  drivers\fsl_qtmr.h
 
    * Component: NXP::Device:SDK Drivers:pit:2.0.2
-      Include file:  drivers\fsl_pit.h
       Source file:   drivers\fsl_pit.c
+      Include file:  drivers\fsl_pit.h
 
    * Component: NXP::Device:SDK Drivers:lpuart_edma:2.2.7
       Source file:   drivers\fsl_lpuart_edma.c
       Include file:  drivers\fsl_lpuart_edma.h
 
    * Component: NXP::Device:SDK Drivers:lpuart_adapter:1.0.0
-      Include file:  components\uart\uart.h
       Source file:   components\uart\lpuart_adapter.c
+      Include file:  components\uart\uart.h
 
    * Component: NXP::Device:SDK Drivers:lpuart:2.2.7
-      Source file:   drivers\fsl_lpuart.c
       Include file:  drivers\fsl_lpuart.h
+      Source file:   drivers\fsl_lpuart.c
 
    * Component: NXP::Device:SDK Drivers:lpspi:2.0.3
-      Include file:  drivers\fsl_lpspi.h
       Source file:   drivers\fsl_lpspi.c
+      Include file:  drivers\fsl_lpspi.h
 
    * Component: NXP::Device:SDK Drivers:lists:1.0.0
       Source file:   components\lists\generic_list.c
@@ -259,16 +191,16 @@ Package Vendor: NXP
       Include file:  drivers\fsl_iomuxc.h
 
    * Component: NXP::Device:SDK Drivers:i2c:2.1.9
-      Source file:   drivers\fsl_lpi2c.c
       Include file:  drivers\fsl_lpi2c.h
+      Source file:   drivers\fsl_lpi2c.c
 
    * Component: NXP::Device:SDK Drivers:gpt:2.0.0
-      Source file:   drivers\fsl_gpt.c
       Include file:  drivers\fsl_gpt.h
+      Source file:   drivers\fsl_gpt.c
 
    * Component: NXP::Device:SDK Drivers:gpio:2.0.2
-      Source file:   drivers\fsl_gpio.c
       Include file:  drivers\fsl_gpio.h
+      Source file:   drivers\fsl_gpio.c
 
    * Component: NXP::Device:SDK Drivers:edma:2.1.8
       Source file:   drivers\fsl_edma.c
@@ -279,60 +211,60 @@ Package Vendor: NXP
       Source file:   drivers\fsl_dmamux.c
 
    * Component: NXP::Device:SDK Drivers:common:2.1.0
-      Include file:  drivers\fsl_common.h
       Source file:   drivers\fsl_common.c
+      Include file:  drivers\fsl_common.h
 
    * Component: NXP::Device:SDK Drivers:clock:2.1.0
-      Source file:   drivers\fsl_clock.c
       Include file:  drivers\fsl_clock.h
+      Source file:   drivers\fsl_clock.c
 
    * Component: NXP::Device:SDK Drivers:adc_etc:2.0.1
       Source file:   drivers\fsl_adc_etc.c
       Include file:  drivers\fsl_adc_etc.h
 
    * Component: NXP::Device:SDK Drivers:adc_12b1msps_sar:2.0.2
-      Include file:  drivers\fsl_adc.h
       Source file:   drivers\fsl_adc.c
+      Include file:  drivers\fsl_adc.h
 
    * Component: ARM::CMSIS:RTOS2:FreeRTOS:10.2.0
-      Source file:   CMSIS\RTOS2\FreeRTOS\Source\os_systick.c
       Source file:   CMSIS\RTOS2\FreeRTOS\Source\ARM\clib_arm.c
+      Source file:   CMSIS\RTOS2\FreeRTOS\Source\os_systick.c
       Source file:   CMSIS\RTOS2\FreeRTOS\Source\cmsis_os2.c
 
    * Component: ARM::CMSIS:CORE:5.3.0
 
    * Component: ARM.FreeRTOS::RTOS:Timers:10.2.0
-      Source file:   Source\timers.c
       Include file:  Source\include\timers.h
+      Source file:   Source\timers.c
 
    * Component: ARM.FreeRTOS::RTOS:Stream Buffer:10.2.0
       Include file:  Source\include\stream_buffer.h
       Source file:   Source\stream_buffer.c
 
    * Component: ARM.FreeRTOS::RTOS:Message Buffer:10.2.0
-      Include file:  Source\include\message_buffer.h
       Source file:   Source\stream_buffer.c
+      Include file:  Source\include\message_buffer.h
 
    * Component: ARM.FreeRTOS::RTOS:Heap:Heap_4:10.2.0
       Source file:   Source\portable\MemMang\heap_4.c
 
    * Component: ARM.FreeRTOS::RTOS:Event Groups:10.2.0
-      Source file:   Source\event_groups.c
       Include file:  Source\include\event_groups.h
+      Source file:   Source\event_groups.c
 
    * Component: ARM.FreeRTOS::RTOS:Coroutines:10.2.0
-      Include file:  Source\include\croutine.h
       Source file:   Source\croutine.c
+      Include file:  Source\include\croutine.h
 
    * Component: ARM.FreeRTOS::RTOS:Core:Cortex-M:10.2.0
-      Include file:  Source\include\FreeRTOS.h
-      Include file:  Source\include\task.h
-      Source file:   Source\queue.c
-      Source file:   Source\portable\RVDS\ARM_CM7\r0p1\port.c
-      Include file:  Source\include\queue.h
       Source file:   Source\list.c
-      Source file:   Source\tasks.c
+      Include file:  Source\include\queue.h
       Include file:  Source\include\semphr.h
+      Source file:   Source\queue.c
+      Include file:  Source\include\FreeRTOS.h
+      Source file:   Source\tasks.c
+      Include file:  Source\include\task.h
+      Source file:   Source\portable\RVDS\ARM_CM7\r0p1\port.c
       Source file:   CMSIS\RTOS2\FreeRTOS\Source\freertos_evr.c
 
    * Component: ARM.FreeRTOS::RTOS:Config:CMSIS RTOS2:10.2.0
@@ -340,7 +272,7 @@ Package Vendor: NXP
 
    * Component: ::CMSIS:RTOS2:2.1.3 (API)
       Include file:  CMSIS\RTOS2\Include\cmsis_os2.h
-Build Time Elapsed:  00:01:01
+Build Time Elapsed:  00:00:05
 </pre>
 </body>
 </html>
